# feel-the-basa

./: .gitignore  Cargo.toml  README.md  build.rs
resource/: feel_the_basa.rc
src/: bytes.rs  error.rs  icon.rs  main.rs
src/nwg_extension/: tooltip.rs
