[package]
name = "feel_the_basa"
version = "0.1.2"
edition = "2018"
authors = ["Aviad Gafni <gaf@duck.com>"]

[dependencies]
native-windows-derive = "1.0.4"
native-windows-gui = "1.0.12"
reqwest = { version = "0.11.6", features = ["blocking"]}
regex = "1.5.4"
semver = "1.0.4"

[build-dependencies]
embed-resource = "1.6.4"