[package]
name = "feel_the_basa"
version = "0.1.4"
edition = "2018"
authors = ["Aviad Gafni <gaf@duck.com>"]

[dependencies]
native-windows-derive = "1.0.4"
native-windows-gui = "1.0.12"
tinyget = { version = "1.0.0", features = ["https"]}
regex = "1.5.4"
semver = "1.0.4"
paste = "1.0"

[build-dependencies]
embed-resource = "1.6.4"